--- a/MovementTesting/Assembly-CSharp.csproj
+++ b/MovementTesting/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
      <Compile Include="Assets\Scripts\PlayerInput.cs" />
      <Compile Include="Assets\Scripts\PlayerMove.cs" />
      <Compile Include="Assets\Scripts\SpikeBehavior.cs" />
+     <Compile Include="Assets\Scripts\SpinScript.cs" />
      <Compile Include="Assets\Scripts\SwitchInput.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
