LEVEL SELECT + Better Death scenes and messages

--- a/MovementTesting/MovementTesting.csproj
+++ b/MovementTesting/MovementTesting.csproj
@@ -234,6 +234,8 @@
     <Compile Include="Assets\Scripts\KillableEntityBehavior.cs" />
     <Compile Include="Assets\Scripts\LaserBehavior.cs" />
     <Compile Include="Assets\Scripts\MaxVelocityBehavior.cs" />
+    <Compile Include="Assets\Scripts\MenuControllerBehavior.cs" />
+    <Compile Include="Assets\Scripts\MenuIconBehavior.cs" />
     <Compile Include="Assets\Scripts\MessageBehavior.cs" />
     <Compile Include="Assets\Scripts\MissileBehavior.cs" />
     <Compile Include="Assets\Scripts\NPCBehaviors\BasicBehaviorBehavior.cs" />
