--- a/MovementTesting/MovementTesting.csproj
+++ b/MovementTesting/MovementTesting.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Assets\Scripts\GravityBehavior.cs" />
     <Compile Include="Assets\Scripts\KillableEntityBehavior.cs" />
     <Compile Include="Assets\Scripts\LaserBehavior.cs" />
+    <Compile Include="Assets\Scripts\LevelUnlockMaster.cs" />
     <Compile Include="Assets\Scripts\MaxVelocityBehavior.cs" />
     <Compile Include="Assets\Scripts\MenuControllerBehavior.cs" />
     <Compile Include="Assets\Scripts\MenuIconBehavior.cs" />
