--- a/MovementTesting/MovementTesting.csproj
+++ b/MovementTesting/MovementTesting.csproj
@@ -244,6 +244,7 @@
     <Compile Include="Assets\Scripts\NPCBehaviors\EdgeDetector.cs" />
     <Compile Include="Assets\Scripts\NPCBehaviors\WallDetectorBehavior.cs" />
     <Compile Include="Assets\Scripts\OuputBehavior.cs" />
+    <Compile Include="Assets\Scripts\PhasingProjectileBehavior.cs" />
     <Compile Include="Assets\Scripts\PistonBehavior.cs" />
     <Compile Include="Assets\Scripts\PlatformDetectorBehavior.cs" />
     <Compile Include="Assets\Scripts\PlayerInput.cs" />
