--- a/MovementTesting/Assembly-CSharp.csproj
+++ b/MovementTesting/Assembly-CSharp.csproj
@@ -51,31 +51,46 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Boss3Sc1.cs" />
+     <Compile Include="Assets\Scripts\BossCannonBehavior.cs" />
+     <Compile Include="Assets\Scripts\bossFireBehavior.cs" />
      <Compile Include="Assets\Scripts\BulletBehavior.cs" />
      <Compile Include="Assets\Scripts\ButtonBehavior.cs" />
      <Compile Include="Assets\Scripts\CameraMovement.cs" />
      <Compile Include="Assets\Scripts\ColliderTrigger.cs" />
+     <Compile Include="Assets\Scripts\DeathControllerScript.cs" />
      <Compile Include="Assets\Scripts\DoorBehavior.cs" />
      <Compile Include="Assets\Scripts\ExitBehavior.cs" />
+     <Compile Include="Assets\Scripts\FakeSpikeScript.cs" />
      <Compile Include="Assets\Scripts\GlobalMethods.cs" />
      <Compile Include="Assets\Scripts\GravityBehavior.cs" />
+     <Compile Include="Assets\Scripts\KillableEntityBehavior.cs" />
+     <Compile Include="Assets\Scripts\LaserBehavior.cs" />
      <Compile Include="Assets\Scripts\MaxVelocityBehavior.cs" />
+     <Compile Include="Assets\Scripts\MenuControllerBehavior.cs" />
+     <Compile Include="Assets\Scripts\MenuIconBehavior.cs" />
+     <Compile Include="Assets\Scripts\MessageBehavior.cs" />
      <Compile Include="Assets\Scripts\MissileBehavior.cs" />
      <Compile Include="Assets\Scripts\NPCBehaviors\BasicBehaviorBehavior.cs" />
      <Compile Include="Assets\Scripts\NPCBehaviors\ChaseBehavior.cs" />
      <Compile Include="Assets\Scripts\NPCBehaviors\EdgeDetector.cs" />
      <Compile Include="Assets\Scripts\NPCBehaviors\WallDetectorBehavior.cs" />
      <Compile Include="Assets\Scripts\OuputBehavior.cs" />
+     <Compile Include="Assets\Scripts\ParticleRotationSciript.cs" />
      <Compile Include="Assets\Scripts\PistonBehavior.cs" />
      <Compile Include="Assets\Scripts\PlatformDetectorBehavior.cs" />
      <Compile Include="Assets\Scripts\PlayerInput.cs" />
      <Compile Include="Assets\Scripts\PlayerMove.cs" />
+     <Compile Include="Assets\Scripts\ProjectExclusionTag.cs" />
      <Compile Include="Assets\Scripts\RotatingBehavior.cs" />
+     <Compile Include="Assets\Scripts\SelfDestruction.cs" />
      <Compile Include="Assets\Scripts\ShifterBehavior.cs" />
      <Compile Include="Assets\Scripts\SpikeBehavior.cs" />
      <Compile Include="Assets\Scripts\SpinBehavior.cs" />
      <Compile Include="Assets\Scripts\StickyBehavior.cs" />
+     <Compile Include="Assets\Scripts\StickyCube.cs" />
      <Compile Include="Assets\Scripts\SwitchInput.cs" />
+     <Compile Include="Assets\Scripts\TriggerOnDeathBehavior.cs" />
      <Compile Include="Assets\Scripts\TurretBehavior.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
