Spike move ting

--- a/MovementTesting/Assembly-CSharp.csproj
+++ b/MovementTesting/Assembly-CSharp.csproj
@@ -59,6 +59,8 @@
      <Compile Include="Assets\Scripts\CameraMovement.cs" />
      <Compile Include="Assets\Scripts\ColliderTrigger.cs" />
      <Compile Include="Assets\Scripts\DeathControllerScript.cs" />
+     <Compile Include="Assets\Scripts\DestroyMS.cs" />
+     <Compile Include="Assets\Scripts\Diagonal.cs" />
      <Compile Include="Assets\Scripts\DoorBehavior.cs" />
      <Compile Include="Assets\Scripts\ExitBehavior.cs" />
      <Compile Include="Assets\Scripts\FakeSpikeScript.cs" />
@@ -66,6 +68,7 @@
      <Compile Include="Assets\Scripts\GravityBehavior.cs" />
      <Compile Include="Assets\Scripts\KillableEntityBehavior.cs" />
      <Compile Include="Assets\Scripts\LaserBehavior.cs" />
+     <Compile Include="Assets\Scripts\LevelUnlockMaster.cs" />
      <Compile Include="Assets\Scripts\MaxVelocityBehavior.cs" />
      <Compile Include="Assets\Scripts\MenuControllerBehavior.cs" />
      <Compile Include="Assets\Scripts\MenuIconBehavior.cs" />
@@ -77,6 +80,7 @@
      <Compile Include="Assets\Scripts\NPCBehaviors\WallDetectorBehavior.cs" />
      <Compile Include="Assets\Scripts\OuputBehavior.cs" />
      <Compile Include="Assets\Scripts\ParticleRotationSciript.cs" />
+     <Compile Include="Assets\Scripts\PhasingProjectileBehavior.cs" />
      <Compile Include="Assets\Scripts\PistonBehavior.cs" />
      <Compile Include="Assets\Scripts\PlatformDetectorBehavior.cs" />
      <Compile Include="Assets\Scripts\PlayerInput.cs" />
