--- a/MovementTesting/MovementTesting.csproj
+++ b/MovementTesting/MovementTesting.csproj
@@ -227,6 +227,8 @@
     <Compile Include="Assets\Scripts\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\ColliderTrigger.cs" />
     <Compile Include="Assets\Scripts\DeathControllerScript.cs" />
+    <Compile Include="Assets\Scripts\DestroyMS.cs" />
+    <Compile Include="Assets\Scripts\Diagonal.cs" />
     <Compile Include="Assets\Scripts\DoorBehavior.cs" />
     <Compile Include="Assets\Scripts\ExitBehavior.cs" />
     <Compile Include="Assets\Scripts\FakeSpikeScript.cs" />
